StatPriority refactor + Guard Fix (#6384)
- StatPriority refactor to a central enum
- Fix guard applying on all hits
- Fix dawnbringer ichor not working on Heart of the Jungle
- Impact no longer has 1 tick delay before activating
- Fix AbsorbingBarrier removing the wrong amount of absorption in rare cases