@@ -30,11 +30,6 @@ public class Piercing implements Enchantment {
 	}
 
 	@Override
-	public double getPriorityAmount() {
-		return 827; // After Multishot
-	}
-
-	@Override
 	public void onProjectileLaunch(Plugin plugin, Player player, double level, ProjectileLaunchEvent event, Projectile proj) {
 		if (proj instanceof AbstractArrow arrow && !(proj instanceof Trident)) {
 
@@ -44,7 +39,7 @@ public class Piercing implements Enchantment {
 			}
 
 			// Some skills can add piercing
-			arrow.setPierceLevel(Math.max(0, Math.min(arrow.getPierceLevel() + (int) level, 127)));
+			arrow.setPierceLevel(Math.clamp(arrow.getPierceLevel() + (int) level, 0, 127));
 		}
 	}
 }
